Update Sidebar to prevent overlap of avatar and subtitle

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -529,7 +529,7 @@
 
 	#logo {
 		position: relative;
-		margin: 1.75em 1.5em 1.5em 1.5em;
+		margin: 1.75em 1em 1.5em 1.5em;
 		min-height: 48px;
 		cursor: default;
 
